source/tests/errors/interpolation_operators.apex
import os
name = "Alice"
os.output("Hello, {name + !}")